--- a/meta/main.yml
+++ b/meta/main.yml
@@ -9,6 +9,13 @@ galaxy_info:
   company: "Half Tree Labs"
   license: "license (BSD, MIT)"
   min_ansible_version: 1.0
+  platforms:
+    - name: Ubuntu
+      versions:
+      - all
+    - name: Debian
+      versions:
+      - all
   galaxy_tags:
     - ping
     - debugging
